--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,16 @@ output: github_document
 載入使用資料們
 ```{r}
 #這是R Code Chunk
+library(readr)
+Banqiao <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Banqiao_20170217.csv")
+Linkou <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Linkou_20170217.csv")
+Sanchong <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Sanchong_20170217.csv")
+Tanshui <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Tanshui_20170217.csv")
+Tucheng <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Tucheng_20170217.csv")
+WanLi <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_WanLi_20170217.csv")
+Xinzhuang <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Xinzhuang_20170217.csv")
+Xizhi <- read_csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Xizhi_20170217.csv")
+FactoryLocation <- read_csv("D:/BigDataHW/HW6/NewTaipeiFactoryLocation_0002336861720153000188.csv")
 ```
 
 ## 資料處理與清洗
