--- a/README.Rmd
+++ b/README.Rmd
@@ -30,14 +30,15 @@ output: github_document
 ```{r}
 #這是R Code Chunk
 library(readr)
-Banqiao <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Banqiao_20170217.csv")
-Linkou <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Linkou_20170217.csv")
-Sanchong <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Sanchong_20170217.csv")
-Tanshui <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Tanshui_20170217.csv")
-Tucheng <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Tucheng_20170217.csv")
-WanLi <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_WanLi_20170217.csv")
-Xinzhuang <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Xinzhuang_20170217.csv")
-Xizhi <- read.csv("D:/BigDataHW/HW6/NewTaipeiCity/105_Xizhi_20170217.csv")
+library(readxl)
+Pollution <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年板橋站_20170217.xls")
+Linkou <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年林口站_20170217.xls")
+Sanchong <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年三重站_20170217.xls")
+Tanshui <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年淡水站_20170217.xls")
+Tucheng <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年土城站_20170217.xls")
+WanLi <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年萬里站_20170217.xls")
+Xinzhuang <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年新莊站_20170217.xls")
+Xizhi <- read_excel("D:/BigDataHW/HW6/NewTaipeiCity/105年汐止站_20170217.xls")
 NewTaipeiFactoryLocation <- read_csv("D:/BigDataHW/HW6/NewTaipeiFactoryLocation_0002336861720153000188.csv")
 ```
 
@@ -47,14 +48,18 @@ NewTaipeiFactoryLocation <- read_csv("D:/BigDataHW/HW6/NewTaipeiFactoryLocation_
 處理資料
 ```{r}
 #這是R Code Chunk
-AirPollution.20160231 <- rbind(Banqiao[grepl("2016/12/31",Banqiao$日期),],    Linkou[grepl("2016/12/31",Linkou$日期),],                                                Sanchong[grepl("2016/12/31",Sanchong$日期),],  Tanshui[grepl("2016/12/31",Tanshui$日期),],                                              Tucheng[grepl("2016/12/31",Tucheng$日期),],    WanLi[grepl("2016/12/31",WanLi$日期),],
-                               Xinzhuang[grepl("2016/12/31",Xinzhuang$日期),],Xizhi[grepl("2016/12/31",Xizhi$日期),])
+AirPollution.20160231 <- rbind(Banqiao[grepl("2016/12/31",Banqiao$`日期`),],    Linkou[grepl("2016/12/31",Linkou$`日期`),],                                                Sanchong[grepl("2016/12/31",Sanchong$`日期`),],  Tanshui[grepl("2016/12/31",Tanshui$`日期`),],                                              Tucheng[grepl("2016/12/31",Tucheng$`日期`),], 
+WanLi[grepl("2016/12/31",WanLi$`日期`),],
+Xinzhuang[grepl("2016/12/31",Xinzhuang$`日期`),],
+Xizhi[grepl("2016/12/31",Xizhi$`日期`),])
+
 for (i in 4:ncol(AirPollution.20160231)) {
    if (!all(AirPollution.20160231[,i] %in% c("NR"," ","x","*","#"))) {
      AirPollution.20160231[,i] <- as.numeric(as.character(AirPollution.20160231[,i]))
    }
 }
 AirPollution.20160231$Average<- rowMeans(AirPollution.20160231[, 4:27],na.rm = TRUE)
+
 ```
 
 ## 探索式資料分析
