--- a/README.Rmd
+++ b/README.Rmd
@@ -48,14 +48,20 @@ NewTaipeiFactoryLocation <- read_csv("D:/BigDataHW/HW6/NewTaipeiFactoryLocation_
 處理資料
 ```{r}
 #這是R Code Chunk
-AirPollution.20160231 <- rbind(Banqiao[grepl("2016/12/31",Banqiao$`日期`),],    Linkou[grepl("2016/12/31",Linkou$`日期`),],                                                Sanchong[grepl("2016/12/31",Sanchong$`日期`),],  Tanshui[grepl("2016/12/31",Tanshui$`日期`),],                                              Tucheng[grepl("2016/12/31",Tucheng$`日期`),], 
-WanLi[grepl("2016/12/31",WanLi$`日期`),],
-Xinzhuang[grepl("2016/12/31",Xinzhuang$`日期`),],
-Xizhi[grepl("2016/12/31",Xizhi$`日期`),])
+AirPollution.20160231 <- rbind(
+  Banqiao[grepl("2016/12/31",Banqiao$`日期`),],
+  Linkou[grepl("2016/12/31",Linkou$`日期`),],
+  Sanchong[grepl("2016/12/31",Sanchong$`日期`),],
+  Tanshui[grepl("2016/12/31",Tanshui$`日期`),],
+  Tucheng[grepl("2016/12/31",Tucheng$`日期`),],
+  WanLi[grepl("2016/12/31",WanLi$`日期`),],
+  Xinzhuang[grepl("2016/12/31",Xinzhuang$`日期`),],
+  Xizhi[grepl("2016/12/31",Xizhi$`日期`),])
 
+AirPollution.20160231 <- as.data.frame(AirPollution.20160231)
 for (i in 4:ncol(AirPollution.20160231)) {
    if (!all(AirPollution.20160231[,i] %in% c("NR"," ","x","*","#"))) {
-     AirPollution.20160231[,i] <- as.numeric(as.character(AirPollution.20160231[,i]))
+     AirPollution.20160231[,i] <- as.numeric(AirPollution.20160231[,i])
    }
 }
 AirPollution.20160231$Average<- round(rowMeans(AirPollution.20160231[, 4:27],na.rm = TRUE),2)
