--- a/README.Rmd
+++ b/README.Rmd
@@ -70,7 +70,6 @@ NewTaipeiFactoryLocation <- read_csv("D:/BigDataHW/HW6/NewTaipeiFactoryLocation_
 處理資料
 ```{r}
 #這是R Code Chunk
-
 #Banqiao
 names(Banqiao)[names(Banqiao)=="日期"]="Date";
 names(Banqiao)[names(Banqiao)=="測站"]="Station";
@@ -100,7 +99,57 @@ names(Xizhi)[names(Xizhi)=="日期"]="Date";
 names(Xizhi)[names(Xizhi)=="測站"]="Station";
 names(Xizhi)[names(Xizhi)=="測項"]="Item";
 
-AirAll<-rbind(Banqiao,Linkou,Sanchong,Tucheng,WanLi,Xinzhuang,Xizhi)
+#7月
+AirPollution.201607 <- rbind(
+  Banqiao[grepl("2016/07",Banqiao$Date),],
+  Linkou[grepl("2016/07",Linkou$Date),],
+  Sanchong[grepl("2016/07",Sanchong$Date),],
+  Tucheng[grepl("2016/07",Tucheng$Date),],
+  WanLi[grepl("2016/07",WanLi$Date),],
+  Xinzhuang[grepl("2016/07",Xinzhuang$Date),],
+  Xizhi[grepl("2016/07",Xizhi$Date),])
+AirPollution.201607 <- as.data.frame(AirPollution.201607)
+for (i in 4:ncol(AirPollution.201607)) {
+   if (!all(AirPollution.201607[,i] %in% c(" ","x","*","#"))) {
+     AirPollution.201607[,i] <- as.numeric(AirPollution.201607[,i])
+   }
+}
+AirPollution.201607$Average<- round(rowMeans(AirPollution.201607[, 4:27],na.rm = TRUE),2)
+AirPollution.201607 <- AirPollution.201607[order(AirPollution.201607$Item, -AirPollution.201607$Average),]
+#8月
+AirPollution.201608 <- rbind(
+  Banqiao[grepl("2016/08",Banqiao$Date),],
+  Linkou[grepl("2016/08",Linkou$Date),],
+  Sanchong[grepl("2016/08",Sanchong$Date),],
+  Tucheng[grepl("2016/08",Tucheng$Date),],
+  WanLi[grepl("2016/08",WanLi$Date),],
+  Xinzhuang[grepl("2016/08",Xinzhuang$Date),],
+  Xizhi[grepl("2016/08",Xizhi$Date),])
+AirPollution.201608 <- as.data.frame(AirPollution.201608)
+for (i in 4:ncol(AirPollution.201608)) {
+   if (!all(AirPollution.201608[,i] %in% c(" ","x","*","#"))) {
+     AirPollution.201608[,i] <- as.numeric(AirPollution.201608[,i])
+   }
+}
+AirPollution.201608$Average<- round(rowMeans(AirPollution.201608[, 4:27],na.rm = TRUE),2)
+AirPollution.201608 <- AirPollution.201608[order(AirPollution.201608$Item, -AirPollution.201608$Average),]
+#9月
+AirPollution.201609 <- rbind(
+  Banqiao[grepl("2016/09",Banqiao$Date),],
+  Linkou[grepl("2016/09",Linkou$Date),],
+  Sanchong[grepl("2016/09",Sanchong$Date),],
+  Tucheng[grepl("2016/09",Tucheng$Date),],
+  WanLi[grepl("2016/09",WanLi$Date),],
+  Xinzhuang[grepl("2016/09",Xinzhuang$Date),],
+  Xizhi[grepl("2016/09",Xizhi$Date),])
+AirPollution.201609 <- as.data.frame(AirPollution.201609)
+for (i in 4:ncol(AirPollution.201609)) {
+   if (!all(AirPollution.201609[,i] %in% c(" ","x","*","#"))) {
+     AirPollution.201609[,i] <- as.numeric(AirPollution.201609[,i])
+   }
+}
+AirPollution.201609$Average<- round(rowMeans(AirPollution.201609[, 4:27],na.rm = TRUE),2)
+AirPollution.201609 <- AirPollution.201609[order(AirPollution.201609$Item, -AirPollution.201609$Average),]
 #10月
 AirPollution.201610 <- rbind(
   Banqiao[grepl("2016/10",Banqiao$Date),],
@@ -152,8 +201,20 @@ for (i in 4:ncol(AirPollution.201612)) {
 }
 AirPollution.201612$Average<- round(rowMeans(AirPollution.201612[, 4:27],na.rm = TRUE),2)
 AirPollution.201612 <- AirPollution.201612[order(AirPollution.201612$Item, -AirPollution.201612$Average),]
-##10+11+12月
+##7+8+9+10+11+12月
 Air_Tidy<-rbind(
+  AirPollution.201607[,-4:-27] %>% group_by(Station,Item) %>%
+    summarise(
+      Month= 7,
+      Mean = mean(Average,na.rm = T)),
+  AirPollution.201608[,-4:-27] %>% group_by(Station,Item) %>%
+    summarise(
+      Month= 8,
+      Mean = mean(Average,na.rm = T)),
+  AirPollution.201609[,-4:-27] %>% group_by(Station,Item) %>%
+    summarise(
+      Month= 9,
+      Mean = mean(Average,na.rm = T)),
   AirPollution.201610[,-4:-27] %>% group_by(Station,Item) %>%
     summarise(
       Month= 10,
@@ -194,9 +255,8 @@ Air_Tidy.s <- spread(Air_Tidy, Item, Mean)
 ##寬轉長
 Air_Tidy.m <- melt(Air_Tidy, id.vars = c("Station","Month","Item"))
 
-#雙變量----PM10跟PM2.5的相關性，看起來不太相關
+#雙變量----PM10跟PM2.5的相關性，資料超過30筆看起來似乎有相關
 cor(Air_Tidy.s$PM10,Air_Tidy.s$PM2.5)
-
 
 #散佈圖(是否PM10越高則PM2.5越高，因為PM10包含2.5)
 ggplot(data=Air_Tidy.s) +   
@@ -204,27 +264,28 @@ ggplot(data=Air_Tidy.s) +
     geom_point(aes(x=PM2.5,  # 用aes()，描繪散布圖內的各種屬性
                    y=PM10,
                    main="Scatter Plot of PM10-PM2.5",
-                   color=Station
+                   color=Month
                    )
                ) +
   # 用geom_smooth()加上趨勢線
   geom_smooth(aes(x=PM2.5,
                   y=PM10)) +
+  scale_color_continuous(low = "lightblue",high = "darkblue")+
   # 用labs()，進行文字上的標註(Annotation)
   labs(title="Scatter of PM10-PM2.5",
          x="PM2.5",
          y="PM10") + theme_bw()
 
-#長條圖//這裡要修改
-qplot(Station , data = Air_Tidy.s, geom = "bar", weight = PM2.5/3) +
-  ylab("PM2.5") + geom_bar(stat = 'count', fill = 'steelblue', colour = 'blue')
+#長條圖//這裡要+
+qplot(Station , data = Air_Tidy.s, geom = "bar", weight = PM2.5/6) +
+  ylab("PM2.5") + geom_bar(stat = 'count', fill = 'steelblue', colour = 'blue')+ theme_bw()
 
 
 
 
 #互動式圖表
 #library(plotly)
-#ggplotly()
+ggplotly()
 ##要markdown不能用這個
 ```
 
